[package]
name = "story-reth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-consensus = "1.6.3"
alloy-eips = "1.6.3"
alloy-evm = "0.27.2"
alloy-genesis = "1.6.3"
alloy-network = "1.6.3"
alloy-primitives = "1.5.6"
alloy-rlp = "0.3.13"
alloy-rpc-types = "1.6.3"
alloy-rpc-types-eth = "1.6.3"
alloy-serde = "1.6.3"
alloy-signer-local = "1.6.3"
alloy-sol-macro = "1.5.6"
alloy-sol-types = "1.5.6"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
derive_more = "2.0.1"
eyre = "0.6.12"
sha2 = "0.10"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = { version = "0.26.0", features = ["server"] }
jsonrpsee-proc-macros = "0.26.0"

async-trait = "0.1.88"
modular-bitfield = "0.13.1"
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror = "2.0"
tokio = "1.46.0"
tracing = "0.1.41"

[dev-dependencies]
alloy-provider = "1.6.3"
alloy-rpc-client = "1.6.3"
alloy-rpc-types-trace = "1.6.3"
eyre = "0.6.12"
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.2" }
revm-inspectors = "0.34.2"
serde_json = "1.0"
test-fuzz = "7"

[build-dependencies]
vergen = { version = "9.1.0", features = ["build", "cargo", "emit_and_set"] }
vergen-git2 = "9.1.0"

[features]
default = ["jemalloc"]
jemalloc = ["reth/jemalloc"]
asm-keccak = ["reth/asm-keccak"]
min-debug-logs = ["reth/min-debug-logs"]
client = []

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[package.metadata.cargo-machete]
ignored = ["modular-bitfield"]
